# Apple-II-Emulator

./: CMakeLists.txt  README.md  config.json
cards/testCard/: CMakeLists.txt  library.c  library.h  stdlib.asm  testCardPROM.asm  testCardPROM_listing.txt  testCardXROM.asm  testCardXROM_listing.txt
design/: purpose.toml
include/: json.h  memory.h  peripheral.h
rom/: examples.asm  examples_listing.txt  rom.asm  rom_listing.txt  vectors.asm  vectors_listing.txt
src/: HIF.c  cassette.c  cpu.c  json.c  main.c  memory.c  peripheral.c  peripheral.h
wiki/: hardware.md  home.md  peripheral cards.md
